# wikinodes

./: Cargo.toml  LICENSE  README.html  README.md  default.nix
.github/: debug  debug.rs
.github/workflows/: ad4m-model.yaml  apps-tree-of-life-ui copy.yaml  apps-tree-of-life-ui.yaml  backend-holochain.yaml  backend-holochain.yml  holochain.yaml  main.yml  ui.yaml
.github/workflows-disabled/: apps-tree-of-life-ui copy.yaml
apps/tree-of-life/ad4m/: .gitignore  index.ts  package-lock.json  package.json  spike-ipfs-note.ts  spike-ts.ts  tsconfig.json
apps/tree-of-life/ad4m/src/: jestSetup.ts
apps/tree-of-life/ad4m/src/spikes/: ad4m-readme.ts  (+5 more)
apps/tree-of-life/cloudflare/: .gitignore  index.js  package.json  wrangler.toml
apps/tree-of-life/ui/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json
apps/tree-of-life/ui/src/: app.html
backend-holochain/: .gitignore  Cargo.toml  Makefile  dna.yaml  happ.yaml  wikinodes.dna  wikinodes.happ
backend-holochain/dna/: wikinodes.dna  wikinodes.happ
backend-holochain/tests/: package.json
backend-holochain/tests/src/: common.ts  hello_world.ts  who_am_i.ts
backend-holochain/workdir/dna/: dna.yaml  peershare.dna  wikinodes.dna
backend-holochain/zomes/peershare/src/: lib.rs
backend-holochain/zomes/wikinodes/src/: lib.rs
holochain/: Makefile  default.nix
holochain/dna/: dna.yaml
holochain/tests/src/: hello_world.ts
holochain/ui/: .prettierignore  .prettierrc.cjs  package-lock.json  package.json
holochain/ui/src/routes/: demo.svelte
holochain/zomes/wikinodes/: Cargo.toml
holochain/zomes/wikinodes/src/: lib.rs
scripts/: install-hc-tools.sh
spikes/ad4m-social-context/: index.ts
spikes/ad4m-social-context-2/: package-lock.json  package.json
spikes/sveltekit-full-example-app/: package-lock.json
spikes/sveltekit-full-example-app/src/routes/: __layout.svelte
tests/: package-lock.json  package.json  tsconfig.json
tests/src/: index.ts
ui/: package-lock.json  package.json
ui/src/lib/Counter/: index.svelte
ui/src/routes/: demo.svelte  index.svelte
ui/src/routes/todos/: [uid].json.ts  _api.ts  index.svelte
workdir/dna/: peershare.dna
zomes/peershare/: Cargo.toml
zomes/peershare/src/: lib.rs
(+16 files in other folders)
