[workspace]
members = ["zomes/wikinodes"]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = { git = "https://github.com/holochain/holochain", rev = "24ceb63bdea374d1936b723e1966caf2e55ebfdc", package = "hdk" }
# hdk = { path = "../holochain/crates/hdk" }
hc_utils = { git = "https://github.com/holochain/hc-utils", rev = "756ac4ae63382bafdc8f3573222e2d303a7537f7", package = "hc_utils" }
# hc_utils = { path = "../hc-utils/crates/hc-utils" }
holo_hash = { git = "https://github.com/holochain/holochain.git", rev = "24ceb63bdea374d1936b723e1966caf2e55ebfdc", package = "holo_hash" }
