[package]
name = "peershare"
version = "0.1.0"
authors = ["Hedayat Abedijoo <h.abedijoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "peershare"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.0.101-alpha.0"
serde = "1.0.123"

# hc_utils = "0"

# chrono = { version = "0.4", features = ['alloc', 'std']}
# derive_more = "0.99"
# thiserror = "1.0.20"
