[package]
name = "wikinodes"
version = "0.1.0"
authors = ["Harlan T Wood <code@harlantwood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wikinodes"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.0.101-alpha.0"
serde = "1.0.123"
